# NeoZ

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  OPTIMIZATION_CHECKLIST.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build_log.txt
.agent/workflows/: build.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  coverage.yml  labels.yml  lint.yml  release.yml  security.yml  tests.yml
build_release/: CMakeCache.txt
docs/api/: README.md
docs/github/: README.md  SYNC.md  WORKFLOWS.md
docs/wiki/: Home.md
src/: main.cpp
src/adb_service/: AdbService.cpp  AdbService.h  CMakeLists.txt  main.cpp
src/app/: Neo-Z.manifest
src/backend/: NeoController.cpp  NeoController.h
src/core/: ServiceLocator.h  Services.h
src/core/adb/: AdbConnection.cpp  AdbConnection.h  AdbConnector.cpp  AdbConnector.h
src/core/ai/: AiAdvisor.cpp  AiAdvisor.h  GeminiClient.cpp  GeminiClient.h
src/core/aim/: CrosshairDetector.cpp  CrosshairDetector.h
src/core/config/: FastConfig.cpp  FastConfig.h
src/core/input/: InputHook.cpp  InputHook.h  InputState.h  LogitechHID.cpp  LogitechHID.h  WindowsInputReader.cpp  WindowsInputReader.h
src/core/ipc/: IpcServer.cpp  IpcServer.h
src/core/logging/: Logger.cpp  Logger.h
src/core/managers/: AiManager.cpp  AiManager.h  DeviceManager.cpp  DeviceManager.h  InputManager.cpp  InputManager.h  SensitivityManager.cpp  SensitivityManager.h
src/core/perf/: FastConf.hpp  RealTimeSensitivityAI.hpp
src/core/sensitivity/: DRCS.cpp  DRCS.h  EmulatorTranslator.cpp  EmulatorTranslator.h  HostNormalizer.cpp  HostNormalizer.h  SensitivityCalculator.cpp  SensitivityCalculator.h  SensitivityPipeline.cpp  SensitivityPipeline.h  VelocityCurve.cpp  VelocityCurve.h
src/optimizer/: CMakeLists.txt  Main.qml  OptimizerBackend.cpp  OptimizerBackend.h  ZerecaBridgeAdapter.cpp  ZerecaBridgeAdapter.h  main.cpp
src/optimizer/scripts/: ApplyCategory.ps1  Win10_Optimizer.ps1  Win10_Optimizer_Advanced.ps1
src/optimizer/scripts/Advanced/: EdgeRemove.ps1
src/optimizer/scripts/Emulator/High/: Decrease Load.reg  GPU Tweaks.reg  Giảm Ping.reg  Power Throttling off.reg  Thêm Tăng Tốc Chuột.reg  Tăng Tốc Mạng.reg  W10-11 Disable Background Apps.reg  Xoa_Rac_Windows.bat
src/optimizer/scripts/Emulator/low pc/: Boost FPS Bluestacks ( For Windows 10, 11 ).reg  Low End Pc Optimization.reg  Low PC Optimizations.reg  Make Windows Responsive.reg
src/optimizer/scripts/Emulator/mid/: FPS Boost.reg  Get Windows Faster nhanh hơn.reg  Hight All Emulator.bat  Release.reg  Speed up Shutdown.reg  𝙊𝙥𝙩𝙞𝙢𝙞𝙯𝙚 𝙀𝙢𝙪𝙡𝙖𝙩𝙤𝙧.bat
src/optimizer/scripts/GPU/: AMD.reg  Optimize AMD.reg
src/optimizer/scripts/Gaming/: Disable Full Screen Optimizations Globally.reg  FPS boost.reg
src/optimizer/scripts/Ram/: 12GB RAM Boost.reg  16GB RAM Boost.reg  2 - Tem Cleaner.bat  32GB RAM Boost.reg  6GB RAM Boost.reg  8GB RAM Boost.reg
src/optimizer/scripts/Ram/1 - Ram Priority/: 10GB Ram.reg  128GB Ram.reg  12GB Ram.reg  16GB Ram.reg  20GB Ram.reg  24GB Ram.reg  2GB Ram.reg  32GB Ram.reg  3GB Ram.reg  48GB Ram.reg  4GB Ram.reg  64GB Ram.reg  6GB Ram.reg  8GB Ram.reg  Reset to Default.reg
src/optimizer/scripts/Ram/3 - ISLC v1.0.2.2/: ISLC gaming config.Config  ReadMe.txt
src/optimizer/scripts/Services/: Disable Memory Compression.cmd  Disable Unnecessary Services.cmd
src/optimizer/scripts/System/: Useful Tweaks.bat  configUI.ps1  lUKE.reg
src/optimizer/scripts/UI/: killTasks.reg  newMenu.reg  powershellCmd.reg  runAsAdmin.reg
src/optimizer/ui/: ZerecaDashboard.qml  ZerecaLearning.qml  ZerecaLogs.qml  ZerecaSafety.qml  ZerecaUIPanel.qml  ZerecaView.qml
src/ui/: Main.qml
src/ui/components/: AnimatedBackground.qml  EmulatorScanDialog.qml  EventLog.qml  GalaxyBackground.qml  GlassComboBox.qml  GlassPanel.qml  GlassSlider.qml  GlowButton.qml  HealthRing.qml  IconLabel.qml  MonitorOptimizationWindow.qml  MonitorOptimizationWindow_restored.qml.bak  NeoLoader.qml  NeonButton.qml  NeonSlider.qml  NeonToggle.qml  OptimizationTile.qml  OrbitingOrb.qml  ProfileCard.qml  RadarChart.qml  RadialSlider.qml  StatusPill.qml  StatusTile.qml  ThreatRadar.qml
src/ui/components/core/: NeoZButton.qml  NeoZCard.qml  NeoZCheckbox.qml  NeoZComboBox.qml  NeoZPanel.qml  NeoZProgressBar.qml  NeoZSlider.qml  NeoZText.qml  NeoZToggle.qml  qmldir
src/ui/ipc/: IpcClient.cpp  IpcClient.h
src/ui/singletons/: AppSettings.qml  AppState.qml
src/ui/style/: CyberpunkColors.qml  Style.qml  ThemeManager.qml  qmldir
src/ui/views/: AdvancedAiView.qml  DashboardView.qml  GlobalStatusHud.qml  HistoryView.qml  ScriptRunnerView.qml  SensitivityView.qml  SettingsView.qml  Sidebar.qml
src/zereca/: CMakeLists.txt  ZerecaController.cpp  ZerecaController.h
src/zereca/arbiter/: OptimizationArbiter.cpp  OptimizationArbiter.h  OutcomeClassifier.cpp  OutcomeClassifier.h  ProbationLedger.cpp  ProbationLedger.h
src/zereca/core/: EmergencyRollback.cpp  EmergencyRollback.h  FlightRecorder.cpp  FlightRecorder.h  StateReconciler.cpp  StateReconciler.h  TargetState.cpp  TargetState.h  TelemetryReader.cpp  TelemetryReader.h
src/zereca/policy/: EmulatorDetector.cpp  EmulatorDetector.h  HypothesisEngine.cpp  HypothesisEngine.h  ObservationPhase.cpp  ObservationPhase.h  ShadowMode.cpp  ShadowMode.h
src/zereca/types/: ContextHash.cpp  ContextHash.h  ZerecaTypes.cpp  ZerecaTypes.h
tests/: CMakeLists.txt  tst_drcs.cpp  tst_logger.cpp  tst_neocontroller.cpp  tst_sensitivity.cpp
tests/integration/: tst_e2e.cpp
